# sdfgfgfg

./: .gitignore  .replit  bot.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--COMMON-3-BUTTONS-AND-A-DROPDOWN-MENU-PRESENT-IN-ALL-TICKETS-AND-ITS-USES-AND-INSTRUCTION-1--1740370030678.txt  Pasted--ON-PRESSING-SUPPORT-TICKET-SECTION-WHICH-PRESENT-IN-DROPDOWN-MENU-OF-PANNEL-It-opens-a-tic-1740369353937.txt  Pasted--WHAT-EACH-COMMANDS-DO-1-ticket-setup-setups-a-panel-Support-System-Welcome-to-our--1740368803007.txt
commands/: admin.py  tickets.py
config/: transcript_config.json
transcripts/: metadata_10016.json  metadata_10017.json  metadata_10018.json  metadata_10019.json  metadata_10020.json  metadata_10021.json  transcript_10001_57ccfe03.txt  transcript_10001_5d1f2887.txt  transcript_10001_d477bd02.txt  transcript_10001_e9fcd9f8.txt  transcript_10017.txt  transcript_10018_d72b42a5.txt  transcript_10019_e5c7f49b.txt  transcript_10020_3b137e3f.txt  transcript_10021_d4ff0758.txt
utils/: archive_manager.py  config.py  database.py  enhanced_db.py  html_transcript_generator.py  permissions.py  responses.py  storage.py  ticket_closing.py  transcript_manager.py  views.py  web_server.py
